--- a/templates/base.html
+++ b/templates/base.html
@@ -297,8 +297,7 @@
         </footer>
 
     </div>
-
-    {% include "includes/search_form.html" %}
+    {% search_form %}
     {% include "includes/footer_scripts.html" %}
     {% endspaceless %}
 
