--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -105,6 +105,9 @@
             {% endwith %}
         {% endblock %}
         {% block page_related_content %}
+            {% with page.dynamic_content_pages.all as dynamic_content %}
+                {% include "core/inc/related_content.html" %}
+            {% endwith %}
         {% endblock %}
         {% block related_project %}
         {% endblock %}
