--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -116,7 +116,7 @@
 
 {% block page_sub_content %}
 
-    {% if project.type == 'external project' %}
+    {% if project.type == 'external' %}
         <div class="white-bg pb2">
             <hr class="mt0 invisible" />
             <div class="page__block page__block--yellow">
