--- a/app/templates/network/organization_list.html
+++ b/app/templates/network/organization_list.html
@@ -12,11 +12,15 @@
 {% endblock %}
 
 {% block page_title %}
-  <h1 class="dotted">{% trans "Network" %}</h1>
+    <h1 class="dotted">{% trans "Network" %}</h1>
+{% endblock %}
+
+{% block breadcrumb_menu %}
+    {{ block.super }}
+    <li class="breadcrumb__item active">{% trans "Network" %}</li>
 {% endblock %}
 
 {% block page_content %}
-
 
     {% for organization in organizations %}
 
@@ -42,7 +46,5 @@
         <br><br>
 
     {% endfor %}
-
-
 
 {% endblock %}
