--- a/templates/magazine/article/article_detail.html
+++ b/templates/magazine/article/article_detail.html
@@ -101,7 +101,7 @@
             <div class="container">
                 <div class="row tac">
                     <div class="col-xs-12">
-                        <h2 class="dashed dashed--center mt2">{% trans "Also discover" %}</h2>
+                        <h2 class="dashed dashed--center mt2">{% trans "Go further" %}</h2>
                     </div>
                 </div>
                 <div class="row tac">
@@ -111,10 +111,10 @@
                                 {% include 'magazine/article/includes/article_card.html' %}
                             </div>
                         {% else %}
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                            {% include "core/inc/generic_card.html" %}
-                        </div>
-                        {%endif%}
+                            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                {% include "core/inc/generic_card.html" %}
+                            </div>
+                        {% endif %}
                     {% endfor %}
                 </div>
             </div>
@@ -130,18 +130,20 @@
                 {{ article.publish_date|date:"DATE_FORMAT" }}
             </div>
         {% endeditable %}
+
         <div class="page__meta-separator">
 
         </div>
-        {% if article.categories.all.length > 0 %}
-            <div class="page__meta-date">
+
+        {% if article.categories.all|length > 0 %}
+            <div class="page__meta-text">
                 {% for category in article.categories.all %}
-                    {% if forloop.first %} | {% endif %}
                     {% if not forloop.first %}, {% endif %}
                     <strong>{{ category }}</strong>
                 {% endfor %}
             </div>
         {% endif %}
+
         {% with article as object %}
             {% include "includes/share_buttons.html" %}
         {% endwith %}
