--- a/templates/pages/custompage.html
+++ b/templates/pages/custompage.html
@@ -115,13 +115,15 @@
 {% endblock %}
 
 {% block products %}
-    {% for page_product_list in page.custompage.product_lists.all %}
-      {% with page_product_list.list as list %}
-        {% with "shop/includes/product_list_"|add:list.style|add:"_style.html" as template %}
-          {% include template %}
-        {% endwith %}
-      {% endwith %}
-    {% endfor %}
+    {% if page.custompage.product_lists.all|length > 0 %}
+        {% for page_product_list in page.custompage.product_lists.all %}
+          {% with page_product_list.list as list %}
+            {% with "shop/includes/product_list_"|add:list.style|add:"_style.html" as template %}
+              {% include template %}
+            {% endwith %}
+          {% endwith %}
+        {% endfor %}
+    {% endif %}
 {% endblock %}
 
 {% block logo %}
