--- a/templates/agenda/includes/event_date.html
+++ b/templates/agenda/includes/event_date.html
@@ -22,7 +22,7 @@
                 {{ event.start|date:"H\hi" }}
             {% endif %}
         {% else %}
-            {{ event.start|date:"j F" }}<br>
+            {{ event.start|date:"l j F" }}<br>
             {% for period in event.periods.all %}
                 {% if period.date_to and period.date_to|date:"H:i" != "23:59" %}
                     {{ period.date_from|date:"H\hi" }} - {{ period.date_to|date:"H\hi" }}<br>
@@ -39,12 +39,12 @@
         {% with event.periods.all|same_time_in_periods as same_time_in_periods %}
         {% for period in event.periods.all %}
             {% if period.date_to and period.date_to|date:"H:i" != "23:59" %}
-                {{ period.date_from|date:"j F" }} {% trans "from" %} {{ period.date_from|date:"H\hi" }} {% trans "to" %} {{ period.date_to|date:"H\hi" }}<br>
+                {{ period.date_from|date:"l j F" }} {% trans "from" %} {{ period.date_from|date:"H\hi" }} {% trans "to" %} {{ period.date_to|date:"H\hi" }}<br>
             {% else %}
                 {% if event.periods.all|length > 1 and not forloop.last %}
-                    {{ period.date_from|date:"j" }}{% if event.periods.all|length == 2 %} {% trans "and" %} {% else %}, {% endif %}
+                    {{ period.date_from|date:"l j" }}{% if event.periods.all|length == 2 %} {% trans "and" %} {% else %}, {% endif %}
                 {% else %}
-                    {{ period.date_from|date:"j F" }}
+                    {{ period.date_from|date:"l j F" }}
                     {% if event.periods.all|length > 1 and forloop.first %} {% trans "and" %}{% endif %}
                 {% endif %}
                 {% if same_time_in_periods and forloop.last %}
