--- a/app/static/src/sass/modules/_all.scss
+++ b/app/static/src/sass/modules/_all.scss
@@ -19,6 +19,7 @@
 // Sliders
 @import 'sliders/slider-page';
 @import 'sliders/slider-home';
+@import 'sliders/slider-network';
 
 // Page modules
 @import 'breadcrumb';
