--- a/static/src/sass/modules/_page.scss
+++ b/static/src/sass/modules/_page.scss
@@ -37,6 +37,10 @@ $module: ".page";
 
         @include margin(1 0);
 
+        &--small {
+            @include margin(.5 0);
+        }
+
     }
 
     &__meta-date {
@@ -61,6 +65,10 @@ $module: ".page";
         @include line-height(1);
         @include typeface(serif);
         font-weight: weight(heavy);
+
+        &--small {
+            @include font-size(s);
+        }
 
     }
 
