--- a/templates/agenda/includes/event_metainfo_line.html
+++ b/templates/agenda/includes/event_metainfo_line.html
@@ -6,7 +6,7 @@
     </a>
 </div>
 
-<div class="page__meta-separator"></div>
+<div class="page__meta-separator page__meta-separator--small"></div>
 
 {% if event.location %}
     <a href="{% url 'location-detail' event.location.slug %}">
@@ -18,7 +18,7 @@
 
     {% if event.prices.all.0|floatformat != '0' and event.prices.all|length > 0 %}
         <p>
-            <a class="button button--block button--small" href="{% url 'event_booking' event.slug %}" class="event__meta__btn">
+            <a class="button button--small mt1" href="{% url 'event_booking' event.slug %}" class="event__meta__btn">
                 {% trans "Reserve" %}
             </a>
         </p>
