Focus on search modal

--- a/app/templates/pages/menus/header.html
+++ b/app/templates/pages/menus/header.html
@@ -35,7 +35,7 @@
         {% if page.is_primary %}
             {% if forloop.last %}
                 <li class="nav-header__item nav-header__item--special nav-header__item--centered">
-                    <a href="#" class="fsxl" data-open-button="search" id="searchBtn"><i class="fa fa-search" aria-hidden="true"></i></a>
+                    <a href="#" class="fsxl" data-open-button="search" data-search-button><i class="fa fa-search" aria-hidden="true"></i></a>
                 </li>
             </ul>
             {% endif %}
