--- a/app/templates/agenda/event_list.html
+++ b/app/templates/agenda/event_list.html
@@ -74,10 +74,12 @@
                         {% keywords_for mezzanine_agenda.event as tags %}
                         {% all_events as all_events %}
                         {% if tags %}
-                            <a href="{% url 'event_list' %}" class="button{% if not tag %} button--black{% else %} button--white{% endif %}">{% trans "All events" %}</a>
+                            {% comment %}
+                                <a href="{% url 'event_list' %}" class="button{% if not tag %} button--black{% else %} button--white{% endif %}">{% trans "All events" %}</a>
+                            {% endcomment %}
                             {% for t in tags %}
-                                <a href="{% url "event_list_tag" t.slug %}" class="button{% if tag == t %} button--black{% else %} button--white{% endif %}{% if t|tag_is_excluded %} button--excluded{% endif %}">
-                                    {{ t }}
+                                <a href="{% if tag == t %}{% url 'event_list' %}{% else %}{% url "event_list_tag" t.slug %}{% endif %}" class="button{% if tag == t %} button--black{% else %} button--white{% endif %}{% if t|tag_is_excluded %} button--tournees{% endif %}">
+                                    {{ t }} {% if tag == t %}<i class="fa fa-times"></i>{% endif %}
                                 </a>
                             {% endfor %}
                         {% endif %}
