--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -40,7 +40,7 @@
         <p>
             <h4>Filter:</h4>
             {% for key,value in filter_dict.items %}
-                <a href="{{ value.url }}" title="{{ key }}">{{ key }} {{ value.count }}</a><br>
+                <a href="{{ value.url }}" title="{{ value.verbose_name }}">{{ value.verbose_name }} {{ value.count }}</a><br>
             {% endfor %}
             {% if cancel_filter_url %}
                 <a href="{{ cancel_filter_url }}" title="">Cancel filter</a>
@@ -48,10 +48,8 @@
         </p>
         {% for result in results.object_list %}
         {% with result.get_absolute_url as result_url %}
-
+            {{ result.periods.date_from }}{{ result.periods.date_to }}
             <h5>
-                {{ forloop.counter0|add:results.start_index }})
-                 - {{ result|classname }} -
                 {% if result_url %}
                     <a href="{{ result_url }}">{{ result }}</a>
                 {% else %}
@@ -59,7 +57,7 @@
                 {% endif %}
             </h5>
             {% if result.description != result|stringformat:"s" %}
-                <p>{{ result.description|truncatewords_html:20|safe }}</p>
+                <p>{{ result.description|truncatewords_html:200|safe }}</p>
             {% endif %}
             {% if result_url %}
                 <a href="{{ result_url }}">{% trans "read more" %}</a>
